--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "@nestjs/swagger": "^5.0.9",
     "@nestjs/terminus": "^8.0.3",
     "@nestjs/typeorm": "^8.1.2",
-    "@polkadot/api": "^7.8.1",
+    "@polkadot/api": "7.8.1",
     "@sentry/node": "^6.16.1",
     "async-lock": "^1.3.1",
     "axios": "^0.21.1",
